add calculation of percentage
